--- a/Logistic_Website/Logistic_Website/Views/Shared/_Layout.cshtml
+++ b/Logistic_Website/Logistic_Website/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,32 +9,39 @@
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/Logistic_Website.styles.css" asp-append-version="true" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<link rel="stylesheet" href="~/css/style.css">
 </head>
+
 <body>
 	<header>
 		<!-- Top Navigation Bar -->
-	<div class="top-nav">
-		<div class="container" style="display: flex;">
-			<a href="#"><i class="fa-solid fa-house"></i> Home</a>
-			<a href="#"><i class="fa-solid fa-user"></i> Login/Register</a>
-			<a href="#"><i class="fa-solid fa-shield"></i> Bảo mật</a>
-			<a href="#"><i class="fa-solid fa-location-dot"></i> Hải Phòng</a>
-		</div>
-	</div>
-
-	<!-- Main Navigation -->
-	<div class="main-nav">
-		<div class="container" style="display: flex; align-items: center;">
-			<div class="logo">Vchain</div>
-			<div class="main-menu">
-				<a href="#" class="active" onclick="setActive(this)">TRANG CHỦ</a>
-				<a href="#" onclick="setActive(this)" >TRA CỨU BIỂU PHÍ</a>
-				<a href="#" onclick="setActive(this)" >TRACKING</a>
-				<a href="#" onclick="setActive(this)" >LOGISTICS CIRCLE</a>
-				<a href="#" onclick="setActive(this)" >GÓP Ý</a>
+		<div class="top-nav">
+			<div class="container" style="display: flex;">
+				<a href="#"><i class="fa-solid fa-house"></i> Home</a>
+				<a href="#"><i class="fa-solid fa-user"></i> Login/Register</a>
+				<a href="#"><i class="fa-solid fa-shield"></i> Bảo mật</a>
+				<a href="#"><i class="fa-solid fa-location-dot"></i> Hải Phòng</a>
 			</div>
 		</div>
-	</div>
+
+		<!-- Main Navigation -->
+		<div class="main-nav">
+			<div class="container" style="display: flex; align-items: center;">
+				<div class="logo">
+				<a asp-controller="Home" asp-action="Index">
+					<img src="~/content/images/main-logo.png" alt="Vchain" />
+					</a>
+				</div>
+				<div class="main-menu col-10">
+					<a asp-controller="Home" asp-action="Index" onclick="setActive(this)">TRANG CHỦ</a>
+					<a href="#" onclick="setActive(this)">TRA CỨU BIỂU PHÍ</a>
+					<a asp-controller="Tracking" asp-action="Index" onclick="setActive(this)">TRACKING</a>
+					<a href="#" onclick="setActive(this)">LOGISTICS CIRCLE</a>
+					<a href="#" onclick="setActive(this)">GÓP Ý</a>
+				</div>
+			</div>
+		</div>
 	</header>
 	<div>
 		<main role="main" class="pb-3">
@@ -42,7 +50,7 @@
 	</div>
 
 	<footer class="border-top footer">
-		 <!-- Footer -->
+		<!-- Footer -->
 		<div class="footer">
 			<div class="container">
 				<div class="footer-content">
@@ -69,13 +77,14 @@
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
 
 <script>
 	function setActive(link) {
 		// Loại bỏ class 'active' từ tất cả các liên kết
 		var links = document.querySelectorAll('.main-menu a');
-		links.forEach(function(item) {
+		links.forEach(function (item) {
 			item.classList.remove('active');
 		});
 
