add image and format code

--- a/Logistic_Website/Logistic_Website/Views/Tracking/Index.cshtml
+++ b/Logistic_Website/Logistic_Website/Views/Tracking/Index.cshtml
@@ -37,7 +37,7 @@
                                         <img src="@company.LogoUrl" alt="@company.Name" class="company-logo" />
                                     </div>
                                     <div class="company-code">
-                                        <a href="#" class="shipping-link">@company.Code</a>
+                                        <a href="@company.Website" class="shipping-link">@company.Code</a>
                                     </div>
                                 </div>
                             }
