--- a/Logistic_Website/Views/Tracking/Index.cshtml
+++ b/Logistic_Website/Views/Tracking/Index.cshtml
@@ -8,14 +8,18 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col">
-            <div class="d-flex justify-content-between mb-4">
+            <div class="d-flex justify-content-between align-items-end mb-3">
                 <div class="w-75">
-                    @using (Html.BeginForm("Index","Tracking", FormMethod.Get, new { @class = "d-flex flex-column" }))
+                    @using (Html.BeginForm("Index", "Tracking", FormMethod.Get, new { @class = "d-flex flex-column" }))
                     {
-                        <p class="text-center fw-bold" style="font-family: 'Montserrat'; font-size: 31px;">Nhập tên hoặc tên viết tắt của hãng tàu</p>
-                        <div class="input-group d-flex flex-row justify-content-between">
-                            <input type="text" name="query" class="form-control search-input col-9" value="@query" />
-                            <button type="submit" class="btn btn-search col-2">SEARCH</button>
+                        <p class="text-center fw-bold" style="font-size: 31px;">Nhập tên hoặc tên viết tắt của hãng tàu</p>
+                        <div class="input-group d-flex flex-row justify-content-evenly text-center">
+                            <div>
+                                <input type="text" name="query" class="form-control search-input" value="@query" />
+                            </div>
+                            <div>
+                                <button type="submit" class="btn btn-search">SEARCH</button>
+                            </div>
                         </div>
                     }
                 </div>
@@ -34,10 +38,10 @@
                             {
                                 <div class="col-md-2 shipping-company">
                                     <div class="logo-container">
-                                        <img src="@company.LogoUrl" alt="@company.Name" class="company-logo" />
+                                        <img src="~/content/images/@company.Logo" alt="@company.Name" style="max-height :50px; max-width:90%;" />
                                     </div>
                                     <div class="company-code">
-                                        <a href="@company.Website" class="shipping-link">@company.Code</a>
+                                        <a href="@company.Website" target="_blank" rel="noopener noreferrer" class="shipping-link">@company.Code</a>
                                     </div>
                                 </div>
                             }
