--- a/Logistic_Website/wwwroot/css/site.css
+++ b/Logistic_Website/wwwroot/css/site.css
@@ -2,6 +2,13 @@ html {
   font-size: 14px;
 }
 
+@font-face {
+    font-family: 'Be VietNam Pro';
+    src: url('../fonts/BeVietnamPro-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
