--- a/Logistic_Website/Logistic_Website/Views/Shared/_Layout.cshtml
+++ b/Logistic_Website/Logistic_Website/Views/Shared/_Layout.cshtml
@@ -44,12 +44,12 @@
 		</div>
 	</header>
 	<div>
-		<main role="main" class="pb-3">
+		<main role="main">
 			@RenderBody()
 		</main>
 	</div>
 
-	<footer class="border-top footer">
+	<footer>
 		<!-- Footer -->
 		<div class="footer">
 			<div class="container">
