--- a/Logistic_Website/Views/Shared/_Layout.cshtml
+++ b/Logistic_Website/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="~/Logistic_Website.styles.css" asp-append-version="true" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link rel="stylesheet" href="~/css/style.css">
+	<!-- CSS của Choices.js -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css">
 </head>
 
 <body>
@@ -35,7 +37,7 @@
 				</div>
 				<div class="main-menu col-10">
 					<a asp-controller="Home" asp-action="Index" onclick="setActive(this)">TRANG CHỦ</a>
-					<a href="#" onclick="setActive(this)">TRA CỨU BIỂU PHÍ</a>
+					<a asp-controller="FeeLookup" asp-action="Index" onclick="setActive(this)">TRA CỨU BIỂU PHÍ</a>
 					<a asp-controller="Tracking" asp-action="Index" onclick="setActive(this)">TRACKING</a>
 					<a href="#" onclick="setActive(this)">LOGISTICS CIRCLE</a>
 					<a href="#" onclick="setActive(this)">GÓP Ý</a>
@@ -75,6 +77,8 @@
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
+	<!-- JavaScript của Choices.js -->
+	<script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 
