--- a/Logistic_Website/Views/Shared/_Layout.cshtml
+++ b/Logistic_Website/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
 					<a asp-controller="FeeLookup" asp-action="Index" onclick="setActive(this)">TRA CỨU BIỂU PHÍ</a>
 					<a asp-controller="Tracking" asp-action="Index" onclick="setActive(this)">TRACKING</a>
 					<a href="#" onclick="setActive(this)">LOGISTICS CIRCLE</a>
-					<a href="#" onclick="setActive(this)">GÓP Ý</a>
+					<a href="#" onclick="setActive(this)">KHO</a>
 				</div>
 			</div>
 		</div>
@@ -72,7 +72,6 @@
 			</div>
 		</div>
 	</footer>
-
 
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
