--- a/Logistic_Website/Views/Home/Search.cshtml
+++ b/Logistic_Website/Views/Home/Search.cshtml
@@ -12,6 +12,14 @@
 
 	<!-- Schedule List -->
 	<div class="schedule-list">
+		@{
+			if (Model.Count == 0)
+			{
+				<div class="alert alert-warning text-center">
+					<strong>Không tìm thấy lịch tàu nào!</strong>
+				</div>
+			}
+		}
 		@foreach (var item in Model)
 		{
 			<div class="schedule-item">
