--- a/Logistic_Website/Views/Tracking/Index.cshtml
+++ b/Logistic_Website/Views/Tracking/Index.cshtml
@@ -11,9 +11,9 @@
                 <div class="w-75">
                     <div class="d-flex flex-column">
                         <p class="text-center fw-bold" style="font-size: 31px;">Nhập tên hoặc tên viết tắt của hãng tàu</p>
-                        <div class="input-group d-flex flex-row justify-content-evenly text-center">
+                        <div class="input-group d-flex flex-row justify-content-center text-center">
                             <div>
-                                <input type="text" id="query" class="form-control search-input" />
+                                <input type="text" id="query" class="form-control search-input" style="margin-right:25px" />
                             </div>
                             <div>
                                 <button id="searchBtn" class="btn btn-search">SEARCH</button>
