add Logistic circle

--- a/Logistic_Website/Views/FeeLookup/Index.cshtml
+++ b/Logistic_Website/Views/FeeLookup/Index.cshtml
@@ -18,15 +18,15 @@
     <div class="row w-100 mb-5 justify-content-between ">
         <button class="btn  col-3" style="background-color: #d9d9d9;
         color: #1b2737;">
-            llc export
+            lcc export
         </button>
         <button class="btn  col-3" style="background-color: #d9d9d9;
         color: #1b2737;">
-            llc import
+            lcc import
         </button>
         <button class="btn col-3" style="background-color: #d9d9d9;
         color: #1b2737;">
-           lift on/ lift off fee
+            lift on/ lift off fee
         </button>
     </div>
 
