--- a/Logistic_Website/Views/Tracking/Index.cshtml
+++ b/Logistic_Website/Views/Tracking/Index.cshtml
@@ -13,10 +13,10 @@
                         <p class="text-center fw-bold" style="font-size: 31px;">Nhập tên hoặc tên viết tắt của hãng tàu</p>
                         <div class="input-group d-flex flex-row justify-content-center text-center">
                             <div>
-                                <input type="text" id="query" class="form-control search-input" style="margin-right:25px" />
+                                <input type="text" id="query" class="form-control search-input rounded-0" style="margin-right:25px" />
                             </div>
                             <div>
-                                <button id="searchBtn" class="btn btn-search">SEARCH</button>
+                                <button id="searchBtn" class="btn btn-search rounded-0">SEARCH</button>
                             </div>
                         </div>
                     </div>
