--- a/Logistic_Website/Views/Home/Search.cshtml
+++ b/Logistic_Website/Views/Home/Search.cshtml
@@ -1,109 +1,108 @@
-﻿
-@using X.PagedList.Mvc.Core
+﻿@using X.PagedList.Mvc.Core
 @using X.PagedList
 @model X.PagedList.IPagedList<VesselSchedule>
 @{
-	ViewData["Title"] = "Search";
-	Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Search";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container">
-	<div class="page-title">LỊCH TÀU</div>
+    <div class="page-title">LỊCH TÀU</div>
 
-	<!-- Schedule List -->
-	<div class="schedule-list">
-		@{
-			if (Model.Count == 0)
-			{
-				<div class="alert alert-warning text-center">
-					<strong>Không tìm thấy lịch tàu nào!</strong>
-				</div>
-			}
-		}
-		@foreach (var item in Model)
-		{
-			<div class="schedule-item">
-				<div class="shipping-line">@item.Line</div>
-				<a href="#" class="fee-link">Xem biểu phí</a>
+    <!-- Schedule List -->
+    <div class="schedule-list">
+        @{
+            if (Model.Count == 0)
+            {
+                <div class="alert alert-warning text-center">
+                    <strong>Không tìm thấy lịch tàu nào!</strong>
+                </div>
+            }
+        }
+        @foreach (var item in Model)
+        {
+            <div class="schedule-item">
+                <div class="shipping-line">@item.Line</div>
+                <a href="#" class="fee-link">Xem biểu phí</a>
 
-				<div class="route-info">
-					<div class="location">
-						<div class="location-icon">
-							<i class="fa-solid fa-location-dot"></i>
-						</div>
-						<div class="location-name">@item.Origin</div>
-						<div class="location-date">@item.ETA</div>
-					</div>
+                <div class="route-info">
+                    <div class="location">
+                        <div class="location-icon">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
+                        <div class="location-name">@item.Origin</div>
+                        <div class="location-date">@item.ETA</div>
+                    </div>
 
-					<div class="route-arrow">
-						<i class="fa-solid fa-arrow-right"></i>
-					</div>
+                    <div class="route-arrow">
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
 
-					<div class="location">
-						<div class="location-icon">
-							<i class="fa-solid fa-location-dot"></i>
-						</div>
-						<div class="location-name">@item.Destination</div>
-						<div class="location-date">@item.ETD</div>
-					</div>
-				</div>
+                    <div class="location">
+                        <div class="location-icon">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </div>
+                        <div class="location-name">@item.Destination</div>
+                        <div class="location-date">@item.ETD</div>
+                    </div>
+                </div>
 
-				<div class="schedule-details">
-					<div class="days-count">39 DAY(S)</div>
+                <div class="schedule-details">
+                    <div class="days-count">39 DAY(S)</div>
 
-					<div class="vessel-info">
-						<div class="vessel-label"><i class="fa-solid fa-ship"></i> Vessel/Voyage</div>
-						<div class="vessel-name">@item.Vessel</div>
-					</div>
+                    <div class="vessel-info">
+                        <div class="vessel-label"><i class="fa-solid fa-ship"></i> Vessel/Voyage</div>
+                        <div class="vessel-name">@item.Vessel</div>
+                    </div>
 
-					<span class="status-label">@item.Service</span>
+                    <span class="status-label">@item.Service</span>
 
-					<div class="action-buttons">
-						<button class="action-button cut-off-btn">VGM Cut Off</button>
-						<button class="action-button schedule-btn">Lưu lịch tàu</button>
-						<button class="action-button detail-btn">Chi tiết</button>
-					</div>
-				</div>
-			</div>
-		}
-	</div>
+                    <div class="action-buttons">
+                        <button class="action-button cut-off-btn">VGM Cut Off</button>
+                        <button class="action-button schedule-btn">Lưu lịch tàu</button>
+                        <button class="action-button detail-btn">Chi tiết</button>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 
 
-	<div class="text-center">
-		@Html.PagedListPager(Model, page => Url.Action("Search", new { page }),
-			new PagedListRenderOptions
-			{
-				Display = PagedListDisplayMode.IfNeeded,
-				UlElementClasses = new[] { "pagination", "justify-content-center" },
-				LiElementClasses = new[] { "page-item" },
-				LinkToPreviousPageFormat = "<",
-				LinkToNextPageFormat = ">"
-			})
-	</div>
+    <div class="text-center">
+        @Html.PagedListPager(Model, page => Url.Action("Search", new { page }),
+                 new PagedListRenderOptions
+        {
+            Display = PagedListDisplayMode.IfNeeded,
+            UlElementClasses = new[] { "pagination", "justify-content-center" },
+            LiElementClasses = new[] { "page-item" },
+            LinkToPreviousPageFormat = "<",
+            LinkToNextPageFormat = ">"
+        })
+    </div>
 </div>
 
 <style>
-	/* Pagination */
-	.pagination {
-		display: flex;
-		justify-content: center;
-		text-align: center;
-		margin: 0px 0px 20px 0px;
-	}
+    /* Pagination */
+    .pagination {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin: 0px 0px 20px 0px;
+    }
 
-		.pagination a, .pagination span {
-			display: inline-block;
-			padding: 5px 10px;
-			text-decoration: none;
-			border: 1px solid #ddd;
-			color: gray;
-		}
+        .pagination a, .pagination span {
+            display: inline-block;
+            padding: 5px 10px;
+            text-decoration: none;
+            border: 1px solid #ddd;
+            color: gray;
+        }
 
-		.pagination .active {
-			border: 1px solid black;
-			background: #0f2649;
-			color: white !important;
-		}
+        .pagination .active {
+            border: 1px solid black;
+            background: #0f2649;
+            color: white !important;
+        }
 </style>
 
 
