--- a/Logistic_Website/Views/LogisticCircle/_News.cshtml
+++ b/Logistic_Website/Views/LogisticCircle/_News.cshtml
@@ -2,8 +2,7 @@
     <div class="d-flex" style="gap: 20px; height:60px;">
         <div class="position-relative w-100">
             <input type="text"
-                   class="form-control rounded-pill px-4 pe-5 h-100"
-                   placeholder="Search..." />
+                   class="form-control rounded-pill px-4 pe-5 h-100" />
 
             <img src="~/content/images/search-icon.png"
                  alt="Search"
