--- a/Logistic_Website/Views/LogisticCircle/_SearchReviewResult.cshtml
+++ b/Logistic_Website/Views/LogisticCircle/_SearchReviewResult.cshtml
@@ -91,7 +91,7 @@ else
                     </div>
                 </div>
                 <div class="d-flex flex-row justify-content-between align-items-center w-100">
-                    <div class="px-5">
+                    <div class="px-5 pb-3">
                         <div class="fs-6 px-4">@user.Comment</div>
                     </div>
                 </div>
