--- a/Logistic_Website/Views/FeeLookup/_FeeTable.cshtml
+++ b/Logistic_Website/Views/FeeLookup/_FeeTable.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<FeeLookup>
+@model List<FeeLookup>
 <div class="w-100">
     <table class="tg mb-5" style="width:95%; margin:auto;">
         <thead>
@@ -54,3 +54,43 @@
         </tbody>
     </table>
 </div>
+<style>
+    .tg {
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+
+        .tg td {
+            border-color: black;
+            border-style: solid;
+            border-width: 1px;
+            font-size: 14px;
+            overflow: hidden;
+            padding: 10px 5px;
+            word-break: normal;
+        }
+
+        .tg th {
+            border-color: black;
+            border-style: solid;
+            border-width: 1px;
+            font-size: 14px;
+            font-weight: normal;
+            overflow: hidden;
+            padding: 10px 5px;
+            word-break: normal;
+        }
+
+        .tg .tg-c3ow {
+            border-color: inherit;
+            text-align: center;
+            vertical-align: top
+        }
+
+        .tg .tg-7btt {
+            border-color: inherit;
+            font-weight: bold;
+            text-align: center;
+            vertical-align: central
+        }
+</style>
